modified some in auth